--- a/index.html
+++ b/index.html
@@ -119,7 +119,60 @@
     <main id="main">
       <!-- ======= About Section ======= -->
       <section id="about" class="about">
-        <div class="co
+        <div class="container" data-aos="fade-up">
+          <div class="section-title">
+            <h2>About</h2>
+            <p>
+              Dedicated and goal-oriented professional with extensive technical
+              skills and eager to apply program management experience towards
+              supporting a reputable company's goals within the tech industry.
+              Seeking an opportunity to work and grow as a computer engineer.
+            </p>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+            </div>
+            <div class="col-lg-8 pt-4 pt-lg-0 content">
+              <h3>Graphic Designer (Hobby) &amp; Web Developer.</h3>
+              <br />
+
+              <div class="row">
+                <div class="col-lg-5">
+                  <ul>
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Birthday:</strong> <span>16 jun 2005</span>
+                    </li>
+
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Phone:</strong> <span>+91 63532 92036</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>City:</strong> <span>Surat, Gujarat</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul>
+                    <li>
+                      <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
+                      <span>19</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Degree:</strong> <span>IT</span>
+                    </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Email:</strong>
+                      <span>parekhpratham27@gmail.com</span>
+                    </li>
+                  </ul>
+                </div>
               </div>
               <br />
               <br />
