--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <br>
           <div class="hello">
-        <a href="resume.pdf" download="resume.pdf" class="download p-2 rounded-4">Download My Resume</a>
+        <a href="resume.pdf" download="resume.pdf" class="download p-2 rounded-4">Download My CV</a>
           </div>
       </div>
     </section>
