--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Git /Git-hub<i class="val">90%</i></span>
+                <span class="skill">React js<i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="90"
+                    aria-valuenow="50"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
